fixed the spacing on my media file

--- a/src/less/media/postMedia.less
+++ b/src/less/media/postMedia.less
@@ -1,35 +1,27 @@
 @import "../variables";
 
 @media @laptop {
-    .post-container{
-        
-       .post-head{
-        font-size:1.3rem;
-    } 
-    .post-table{  
-    .td{
-        font-size:1rem;
-       
+  .post-container {
+    .post-head {
+      font-size: 1.3rem;
     }
-}
+    .post-table {
+      .td {
+        font-size: 1rem;
+      }
     }
-  
   }
-
-
+}
 
 @media @tablet {
-    .post-container{
-        
-       .post-head{
-        font-size:1rem;
-    } 
-    .post-table{  
-    .td{
-        font-size:.9rem;
-       
+  .post-container {
+    .post-head {
+      font-size: 1rem;
     }
-}
+    .post-table {
+      .td {
+        font-size: 0.9rem;
+      }
     }
-  
   }
+}
